<resources>
    <string name="app_name">TreeHole</string>
    <string name="loginlogo">LoginLogo</string>
    <string name="usc_treehole"><b>USC TreeHole</b></string>
    <string name="enter_username_here">"     tommytrojan@usc.edu"</string>
    <string name="enter_password_here">"     Password"</string>
    <string name="username">Email: *</string>
    <string name="password">Password: *</string>
    <string name="not_a_member_sign_up_now">Not a member? Sign Up Now!</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name: *</string>
    <string name="last_name">Last Name: *</string>
    <string name="profile_picture">Profile Picture: *</string>
    <string name="bio_optional">Bio: </string>
    <string name="phone_number">USC 10-Digit ID: *</string>
    <string name="enter_first_name_here">"     Tommy"</string>
    <string name="enter_last_name_here">"     Trojan"</string>
    <string name="enter_biography_here">"     Tell Us About Yourself"</string>
    <string name="enter_phone_number_here">"     1234567890"</string>
    <string name="sign_in">Sign In</string>
    <string name="required_field">* required field</string>
    <string name="home"><b>Home</b></string>
    <string name="following">Following:</string>
    <string name="explore">Explore:</string>
    <string name="academic">Academic</string>
    <string name="life">Life</string>
    <string name="event">Event</string>
    <string name="bell">bell</string>
    <string name="profile"><b>Profile Page</b></string>
    <string name="tommy_trojan">Tommy Trojan</string>
    <string name="_1234567890">1234567890</string>
    <string name="student">Student</string>
    <string name="tommytrojan_usc_edu">tommytrojan@usc.edu</string>
    <string name="email">Email:</string>
    <string name="bio">Bio:</string>
    <string name="tell_us_about_yourself">Tell Us About Yourself!</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="role_type">Role Type: *</string>
    <string name="upload">Upload</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="role_types">
        <item>Undergrad Student</item>
        <item>Graduate Student</item>
        <item>Faculty</item>
        <item>Staff</item>
    </string-array>
    <string name="speechBubble">Hi!</string>
</resources>